--- a/docs/javaClientUserGuide/patient_processing.tex
+++ b/docs/javaClientUserGuide/patient_processing.tex
@@ -1,7 +1,16 @@
 \chapter{Patient Processing}
+
 \section{Shipment}
+
 \section{Patient Visit}
+
 \section{Scan Link}
+\label{sec:scan_link}
+
 \section{Scan Assign}
+\label{sec:scan_assign}
+
 \section{Cabinet Link and Assign}
+\label{sec:cabinet_scan_link_assign}
+
 \section{Patient Merging}
