--- a/docs/javaClientUserGuide/dispatch.tex
+++ b/docs/javaClientUserGuide/dispatch.tex
@@ -34,7 +34,7 @@ following errors can happen when sending a dispatch:
 Please see sections \ref{sec:dispatch_not_arrive},
 \ref{sec:dispatch_missing_aliquots} and \ref{sec:dispatch_extra_aliquots} for
 instructions on how to deal with these cases.  If a repository site no longer
-sends dispatches, the instructions to remove the dispatche information is given
+sends dispatches, the instructions to remove the dispatch information is given
 in section \ref{sec:config_send_remove}.
 \section{Configure a Site for Sending Dispatches}
 \label{sec:config_send}
