working on overview chapter of java client user manual

--- a/docs/javaClientUserGuide/overview.tex
+++ b/docs/javaClientUserGuide/overview.tex
@@ -1,2 +1,9 @@
 \chapter{Overview}
+    \begin{figure}[H]
+      \centering
+      \scalebox{0.5}
+      { \includegraphics*{screenshots/overview/main_window} }
+      \caption{The Java Client's main window.}
+      \label{fig:main_window}
+    \end{figure}
 \section{Views}
