very small modifications for the configuration part of the documentation

--- a/docs/javaClientUserGuide/configuration.tex
+++ b/docs/javaClientUserGuide/configuration.tex
@@ -130,8 +130,8 @@ is scanned. Scanning profiles can be used during scan link and scan assign (see
 sections \ref{sec:scan_link} and \ref{sec:scan_assign}).
 
 For example: the user may wish to only decode every other row on a pallet. Once
-the profile is created is can be used at scan link and scan assign time and
-only the cells activated in the profile will be decode. If 2D barcodes are
+the profile is created it can be used at scan link and scan assign time and
+only the cells activated in the profile will be decoded. If 2D barcodes are
 found in the cells not active in the profile, the user will be given a warning
 message.
 
@@ -173,7 +173,7 @@ To define a pallet scanning region do the following:
       \caption{Sample flatbed scan.}
       \label{fig:sample_flatbed_scan}
     \end{figure}
-  \item Once the scan is done, You will see something similar to Figure
+  \item Once the scan is done, you will see something similar to Figure
     \ref{fig:sample_flatbed_scan}. The image shown on the right hand side is
     the image taken by the scanner and superimposed is a grid with 8 rows and
     12 columns. The cell coloured in cyan should correspond to tube in row A and
@@ -233,6 +233,6 @@ Previously entered servers can also be edited with the \fbox{Edit} button if a
 spelling mistake was made.
 
 The order in the list can be rearranged with the \fbox{Up} and \fbox{Down}
-buttons to put more frequently accessed servers at the beggining of the list.
+buttons to put more frequently accessed servers at the beginning of the list.
 
 
